using MonopolyGame.Players;

namespace MonopolyGame.ChanceCard;

public interface IDeffenseCard
{
	public void UseCard(IPlayer player);
}
