namespace MonopolyGame.Enum;

public enum BlockColor
{
	Green,
	Blue,
	Yellow,
	Red
}
