namespace MonopolyGame.Enum;

public enum BlockType
{
	Start,
	City,
	Tourism,
	Chance,
	Prison,
	Festival,
	Traveling,
	Tax,
}
