namespace MonopolyGame.Enum;

public enum BuildingEffect
{
    Storm = 50,
    Blackout = 0,
    Festival = 200
}
