namespace MonopolyGame.Enum;

public enum ChanceCardType
{
	Attack,
	Deffense,
	Command
}
