namespace MonopolyGame.Enum;

public enum PlayerStatus
{
	Playing,
	Winner,
	Loser,
	Bankrupt
}
