namespace MonopolyGame.Enum;

public enum PropertyType
{
	Land = 1,
	Villa,
	Building,
	Hotel,
	Landmark
	
}
