namespace MonopolyGame.Enum;

public enum WinningCondition
{
	ColorCompletion,
	LineCompletion,
	Bankruptcy
}
