namespace MonopolyGame.Players;

public interface IPlayer
{
	public string GetName();
	public int GetId();
}
